--- a/src/samples/Hokusai/Hokusai.fsproj
+++ b/src/samples/Hokusai/Hokusai.fsproj
@@ -8,6 +8,8 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Hokusai</RootNamespace>
     <AssemblyName>Mandelbrot</AssemblyName>
+    <RootNamespace>Mandelbrot</RootNamespace>
+    <AssemblyName>Hokusai</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <Name>Mandelbrot</Name>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
