--- a/src/samples/NoisyChannel/NoisyChannel.fsproj
+++ b/src/samples/NoisyChannel/NoisyChannel.fsproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e9081cbd-5c1a-4bea-a086-bbffb5bc2787</ProjectGuid>
+    <ProjectGuid>{E9081CBD-5C1A-4BEA-A086-BBFFB5BC2787}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>NoisyChannel</RootNamespace>
     <AssemblyName>NoisyChannel</AssemblyName>
@@ -25,6 +24,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\NoisyChannel.XML</DocumentationFile>
     <Prefer32Bit>true</Prefer32Bit>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -38,23 +38,25 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="FunScript">
-      <HintPath>..\..\FunScript\bin\Debug\FunScript.dll</HintPath>
+      <HintPath>..\..\main\FunScript\bin\Debug\FunScript.dll</HintPath>
     </Reference>
     <Reference Include="FunScript.Interop">
-      <HintPath>..\..\FunScript\bin\Debug\FunScript.Interop.dll</HintPath>
+      <HintPath>..\..\main\FunScript\bin\Debug\FunScript.Interop.dll</HintPath>
     </Reference>
-    <Reference Include="FunScript.TypeScript.Binding.lib">
-      <HintPath>..\Typings\FunScript.TypeScript.Binding.lib.dll</HintPath>
-    </Reference>
-     <Reference Include="FunScript.TypeScript.Binding.jquery">
-        <HintPath>..\Typings\FunScript.TypeScript.Binding.jquery.dll</HintPath>
-     </Reference>
     <Reference Include="System.Net" />
     <Reference Include="System.Web" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FunScript.TypeScript.Binding.lib">
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
+    </Reference>
+    <Reference Include="FunScript.TypeScript.Binding.jquery">
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\Shared\Launcher.fs">
@@ -63,14 +65,15 @@
     <Compile Include="..\Shared\Extensions.fs">
       <Link>Shared\Extensions.fs</Link>
     </Compile>
-     <Compile Include="page.fs" />
-     <None Include="Web\index.html">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-     </None>
-     <None Include="Web\redundant.png">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-     </None>
+    <Compile Include="page.fs" />
+    <None Include="Web\index.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Web\redundant.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
