--- a/src/data/FunScript.Data/FunScript.Data.fsproj
+++ b/src/data/FunScript.Data/FunScript.Data.fsproj
@@ -61,14 +61,14 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ApiaryProvider">
-      <HintPath>..\..\packages\ApiaryProvider.1.0.2\lib\net40\ApiaryProvider.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\ApiaryProvider.1.0.2\lib\net40\ApiaryProvider.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\..\packages\FSharp.Data.2.0.9\lib\net40\FSharp.Data.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FSharp.Data.2.0.9\lib\net40\FSharp.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
