--- a/src/samples/Mario/Mario.fsproj
+++ b/src/samples/Mario/Mario.fsproj
@@ -49,7 +49,7 @@
       <HintPath>..\..\main\FunScript\bin\Debug\FunScript.Interop.dll</HintPath>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.lib">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net" />
