--- a/src/samples/MovieDatabase/MovieDatabase.fsproj
+++ b/src/samples/MovieDatabase/MovieDatabase.fsproj
@@ -71,7 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="ApiaryProvider">
-      <HintPath>..\packages\ApiaryProvider.1.0.2\lib\net40\ApiaryProvider.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\ApiaryProvider.1.0.2\lib\net40\ApiaryProvider.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FParsec">
@@ -84,7 +84,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Data">
-      <HintPath>..\packages\FSharp.Data.2.0.9\lib\net40\FSharp.Data.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FSharp.Data.2.0.9\lib\net40\FSharp.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FunScript">
@@ -97,11 +97,11 @@
       <HintPath>..\..\main\FunScript\bin\Debug\FunScript.Interop.dll</HintPath>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.jquery">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.lib">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
