--- a/src/samples/Twitter/Twitter.fsproj
+++ b/src/samples/Twitter/Twitter.fsproj
@@ -50,15 +50,15 @@
       <HintPath>..\..\main\FunScript\bin\Debug\FunScript.Interop.dll</HintPath>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.google_maps">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.google_maps.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.google_maps.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.google_maps.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.google_maps.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.jquery">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.lib">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
