--- a/src/samples/jQueryUI/jQueryUI.fsproj
+++ b/src/samples/jQueryUI/jQueryUI.fsproj
@@ -47,15 +47,15 @@
       <HintPath>..\..\main\FunScript\bin\Debug\FunScript.Interop.dll</HintPath>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.jquery">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.jquery.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jquery.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.jqueryui">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.jqueryui.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jqueryui.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.jqueryui.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.jqueryui.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FunScript.TypeScript.Binding.lib">
-      <HintPath>..\packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FunScript.TypeScript.Binding.lib.1.1.0.37\lib\net40\FunScript.TypeScript.Binding.lib.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="mscorlib" />
