--- a/src/tests/FunScript.Tests/FunScript.Tests.fsproj
+++ b/src/tests/FunScript.Tests/FunScript.Tests.fsproj
@@ -104,11 +104,11 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EdgeJs">
-      <HintPath>..\..\packages\Edge.js.0.9.2\lib\EdgeJs.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Edge.js.0.9.2\lib\EdgeJs.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Control.Reactive">
-      <HintPath>..\..\packages\FSharp.Control.Reactive.2.4.0\lib\net40\FSharp.Control.Reactive.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\FSharp.Control.Reactive.2.4.0\lib\net40\FSharp.Control.Reactive.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -122,15 +122,15 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Reactive.Core">
-      <HintPath>..\..\packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Rx-Core.2.2.5\lib\net45\System.Reactive.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Reactive.Interfaces">
-      <HintPath>..\..\packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Reactive.Linq">
-      <HintPath>..\..\packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll</HintPath>
+      <HintPath>$(SolutionDir)packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Web" />
